# F1-NextGen-Mid-Level-Controller

./: Dockerfile  Makefile  README.md  run.sh
docker_resources/: bashrc.sh  raspi-toolchain.cmake
src/common-interfaces/: README.md
src/common-interfaces/lab_msgs/: CMakeLists.txt  package.xml
src/common-interfaces/lab_msgs/msg/: Header.msg  PathPoint.msg  TrajectoryPoint.msg  VehicleCommandDirect.msg  VehicleCommandPathTracking.msg  VehicleCommandSpeedCurvature.msg  VehicleCommandTrajectory.msg  VehicleObservation.msg  VehicleState.msg
src/mid-level-controller/: README.md
src/mid-level-controller/mid_level_controller/: CMakeLists.txt  package.xml
src/mid-level-controller/mid_level_controller/include/mid_level_controller/: Controller.hpp  Localization.hpp  MpcController.hpp  PathInterpolation.hpp  PathTrackingController.hpp  SensorCalibration.hpp  TrajectoryInterpolation.hpp  VehicleModel.hpp  geometry.hpp
src/mid-level-controller/mid_level_controller/include/mid_level_controller/low_level_controller/: spi.h
src/mid-level-controller/mid_level_controller/src/: Controller.cpp  Localization.cpp  MpcController.cpp  PathInterpolation.cpp  PathTrackingController.cpp  SensorCalibration.cpp  TrajectoryInterpolation.cpp  VehicleModel.cpp  bcm2835.c  mid_level_controller_node.cpp
src/mid-level-controller/mid_level_controller/src/low_level_controller/: crc.c  spi.c
