<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mid_level_controller</name>
    <version>1.0.0</version>
    <description>Mid Level Controller for the F1NextGen vehicle.</description>
    <maintainer email="hegerath@embedded.rwth-aachen.de">Lucas Hegerath</maintainer>
    <license>MIT License</license>

    <depend>lab_msgs</depend>
    <depend>rclcpp</depend>
    
    <buildtool_depend>ament_cmake_ros</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
